manifests/ingress-11.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-5725"
    labels:
        app: "diaggarw-5725"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw8371-diaggarw-5725.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-5725"
                servicePort: 8080
